# remote-wol-rs

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.example.yml  index.html  tailwind.config.js
.github/workflows/: build.yml  docker.yml  lint.yml
src/: app.rs  cli.rs  lib.rs  main.rs  ping.rs  server.rs  ssr.rs
style/: input.css  output.css
