[package]
name = "remote_wol"
authors = ["Valentin Bersier <vbersier@gmail.com>"]
description = "A utility to wake up a local computer remotely using a web interface."
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { version = "1", optional = true }
axum = { version = "0.6", optional = true, features = ["json"] }
clap = { version = "4", optional = true, features = ["derive"] }
console_error_panic_hook = "0.1"
console_log = "0.2"
dotenvy = { version = "0.15", optional = true }
fastrand = { version = "1", optional = true }
leptos = { git = "https://github.com/leptos-rs/leptos", default-features = false, features = [
  "serde",
] }
leptos_meta = { git = "https://github.com/leptos-rs/leptos", default-features = false }
leptos_axum = { git = "https://github.com/leptos-rs/leptos", optional = true }
leptos_router = { git = "https://github.com/leptos-rs/leptos", default-features = false }
log = "0.4"
mime_guess = { version = "2", optional = true }
once_cell = { version = "1.17.0", optional = true }
openssl = { version = "0.10", features = ["vendored"], optional = true }
rust-embed = { version = "6", features = ["include-exclude"], optional = true }
serde = "1"
simple_logger = "4"
surge-ping = { version = "0.7", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
wasm-bindgen = "0.2"
wol-rs = { version = "1", optional = true }

[features]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
  "dep:anyhow",
  "dep:axum",
  "dep:clap",
  "dep:dotenvy",
  "dep:fastrand",
  "dep:leptos_axum",
  "dep:mime_guess",
  "dep:once_cell",
  "dep:openssl",
  "dep:rust-embed",
  "dep:surge-ping",
  "dep:tokio",
  "dep:wol-rs",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
]

[package.metadata.leptos]
output-name = "remote_wol"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/output.css"
site-address = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false

[profile.release]
lto = true
