[package]
name = "remote_wol"
authors = ["Valentin Bersier <hi@beeb.li>"]
description = "A utility to wake up a local computer remotely using a web interface."
version = "0.2.8"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { version = "1", optional = true }
axum = { version = "0.6.10", optional = true, features = ["json"] }
clap = { version = "4", optional = true, features = ["derive"] }
console_error_panic_hook = "0.1"
console_log = "1"
dotenvy = { version = "0.15", optional = true }
fastrand = { version = "2", optional = true }
leptos = { version = "0.3", default-features = false, features = ["serde"] }
leptos_meta = { version = "0.3", default-features = false }
leptos_axum = { version = "0.3", optional = true }
leptos_router = { version = "0.3", default-features = false }
log = "0.4"
mime_guess = { version = "2", optional = true }
openssl = { version = "0.10", features = ["vendored"], optional = true }
rust-embed = { version = "6", features = ["include-exclude"], optional = true }
serde = "1"
simple_logger = "4"
surge-ping = { version = "0.8", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower = { version = "0.4", features = ["buffer", "limit"], optional = true }
wasm-bindgen = "0.2"
wol-rs = { version = "1", optional = true }

[features]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
  "dep:anyhow",
  "dep:axum",
  "dep:clap",
  "dep:dotenvy",
  "dep:fastrand",
  "dep:leptos_axum",
  "dep:mime_guess",
  "dep:openssl",
  "dep:rust-embed",
  "dep:surge-ping",
  "dep:tokio",
  "dep:tower",
  "dep:wol-rs",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
]

[package.metadata.leptos]
output-name = "remote_wol"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/output.css"
site-address = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"

[profile.release]
lto = "thin"
strip = true

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
